--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,29 +15,50 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: ~/app
 
     steps:
       - checkout
 
+      - setup_remote_docke
+
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --no-cache \
+              py-pip=9.0.0-r1
+            pip install \
+              docker-compose \
+              awscli
+
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
 
       - run:
-          name: install dependencies
+          name: Load Docker image layer cache
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
+            set +o pipefail
+            docker load -i /caches/app.tar | true
+
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build --cache-from=app -t app .
+
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/app.tar app
 
       - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
           paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
+            - /caches/app.tar
         
       # run tests!
       # this example uses Django's built-in test-runner
@@ -45,12 +66,8 @@ jobs:
       # https://pytest.org
       # https://nose.readthedocs.io
       - run:
-          name: run tests
+          name: Run tests
           command: |
-            . venv/bin/activate
-            python manage.py test
+              true
 
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
-          
+      
