--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - checkout
 
-      - setup_remote_docke
+      - setup_remote_docker
 
       - run:
           name: Install dependencies
