--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-              true
+              docker-compose -f ./docker-compose.test.yml up
+              curl --fail http://127.0.0.1:8000/ 
 
       
