--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-              docker-compose -f ./docker-compose.test.yml up
+              docker-compose -f ~/app/docker-compose.test.yml up
               curl --fail http://127.0.0.1:8000/ 
 
       
