--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,20 +49,12 @@ jobs:
             - /caches/app.tar
 
       - run:
-          name: Start docker-compose in background
-          command: |
-            set +o pipefail
-            docker-compose -f ~/app/docker-compose.test.yml up | true
-          background: true
-
-      - run:
           name: Run tests
           command: |
-              curl --fail http://127.0.0.1:8000/ 
-
-      - run:
-          name: Cleanup
-          command: |
-              docker-compose -f ~/app/docker-compose.test.yml down
+            
+            docker-compose -f ~/app/docker-compose.test.yml up &
+            sleep 10
+            curl --fail http://127.0.0.1:8000/ 
+            docker-compose -f ~/app/docker-compose.test.yml down
 
       
