--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: Run tests
           command: |
             
-            docker-compose -f ~/app/docker-compose.test.yml --no-recreate up &
+            docker-compose -f ~/app/docker-compose.test.yml up --no-recreate &
             sleep 30
             curl --fail http://127.0.0.1:8000/ 
             docker-compose -f ~/app/docker-compose.test.yml down
