--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ jobs:
           name: Run tests
           command: |
             
-            docker-compose -f ~/app/docker-compose.test.yml up --no-recreate &
+            docker-compose -f ~/app/docker-compose.test.yml up --no-recreate -d
             sleep 120
-            curl --fail http://127.0.0.1:8000/ 
+            curl --fail http://localhost:8000/ 
             docker-compose -f ~/app/docker-compose.test.yml down
 
       
